# Applied-Maths-Lab-1

./: .gitignore  Brent.cpp  BrentSection.txt  CMakeLists.txt  Dichotomy.cpp  Dichotomy.h  DichotomySection.txt  Fibonacci.cpp  FibonacciSection.txt  Fibonachi.cpp  GoldenRatio.cpp  GoldenRatioSection.txt  Parabola.cpp  ParabolaSection.txt  constants.h  fibonacciNumberFunction.cpp  fibonachiNumberFunction.cpp  lab1out.txt  main.cpp  methods.h  objectiveFunction.cpp  objectiveFunction.h
output/: DichotomySection.txt  ParabolaSection.txt  lab1out.txt
